--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,9 @@
               "node_modules/font-awesome/css/font-awesome.min.css",
               "src/styles.css"
             ],
-            "scripts": [],
+            "scripts": [
+              "node_modules/popper.js/dist/popper.min.js"
+            ],
             "es5BrowserSupport": true
           },
           "configurations": {
